--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "apollo-server": "^2.19.1",
         "apollo-server-lambda": "^2.19.1",
         "aws-sdk": "^2.911.0",
+        "axios": "^0.21.1",
         "graphql": "^15.5.0",
         "graphql-type-json": "^0.3.2",
         "request": "^2.81.0"
