--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "eslint-plugin-prettier": "^3.4.0",
         "jest": "^26.6.3",
         "msw": "^0.29.0",
+        "nock": "^13.1.0",
         "prettier": "^2.3.1",
         "serverless": "^2.43.1",
         "serverless-offline": "^7.0.0"
