--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "author": "csp",
     "license": "MIT",
     "dependencies": {
+        "apollo-datasource-rest": "^0.14.0",
         "apollo-server": "^2.19.1",
         "apollo-server-lambda": "^2.19.1",
         "aws-sdk": "^2.911.0",
@@ -25,7 +26,6 @@
         "eslint-plugin-prettier": "^3.4.0",
         "jest": "^26.6.3",
         "msw": "^0.29.0",
-        "nock": "^13.1.0",
         "prettier": "^2.3.1",
         "serverless": "^2.43.1",
         "serverless-offline": "^7.0.0"
