--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "test": "jest --coverage",
-        "start": "sls offline start"
+        "start": "sls offline start",
+        "pretest": "standard --fix"
     },
     "author": "csp",
     "license": "MIT",
